--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>测试一下</h1>
+<a href="1.html">作业1</a>
+<a href="2.html">作业2</a>
+<a href="3.html">作业3</a>
+<a href="4.html">作业4</a>
+<a href="5.html">作业5</a>
 </body>
 </html>
