--- a/1.html
+++ b/1.html
@@ -37,7 +37,7 @@
                 baseTime = new Date(baseTime + amount);
                 break;
             default:
-                return 'Invalid unit';
+                return '非法单位';
         }
 
         var newTime = new Date(baseTime);
