--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>张泽宣</title>
+    <title>张泽宣1202作业</title>
 </head>
 <body>
 <h1>测试一下</h1>
-<a href="1.html">作业1</a>
-<a href="2.html">作业2</a>
-<a href="3.html">作业3</a>
-<a href="4.html">作业4</a>
+<a href="1.html">作业1</a><br>
+<a href="2.html">作业2</a><br>
+<a href="3.html">作业3</a><br>
+<a href="4.html">作业4</a><br>
 <a href="5.html">作业5</a>
 </body>
 </html>
