自动提交测试

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>张泽宣1202作业</title>
 </head>
 <body>
-<h1>测试一下</h1>
+<h1>测试一下自动提交</h1>
 <a href="1.html">作业1</a><br>
 <a href="2.html">作业2</a><br>
 <a href="3.html">作业3</a><br>
